--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,7 @@ a, a:link, a:visited, a:hoover, a:active{
     max-width: calc(100% - 50px);
 }
 .outgoing .details p{
+    min-width: 120px;
     background: #314cb6;
     border-radius: 18px 18px 0 18px;
 }
@@ -310,8 +311,9 @@ a, a:link, a:visited, a:hoover, a:active{
 }
 .incoming .details p{
     margin-left: 10px;
+    min-width: 120px;
     background: #d3c9c9;
-    border-radius: 18px 18px 0 18px;
+    border-radius: 18px 18px 18px 0 !important;
 }
 /* End of chat list css */
 
@@ -320,6 +322,7 @@ a, a:link, a:visited, a:hoover, a:active{
     width: 100%;
     height: 11vh;
     border: 1px solid #314cb6;
+    color: #fff !important;
     border-radius: 1px !important;
     display: flex;
     flex-direction: row;
