--- a/css/styles.css
+++ b/css/styles.css
@@ -287,6 +287,13 @@ a, a:link, a:visited, a:hoover, a:active{
     min-width: 120px;
     background: #314cb6;
     border-radius: 18px 18px 0 18px;
+    color: #fff;
+}
+.outgoing .details p .out-time{
+    font-size: 11px;
+    text-align: end;
+    align-items: flex-end;
+    color: #ccc;
 }
 .chat-box .chat{
     margin: 15px 0;
@@ -315,6 +322,16 @@ a, a:link, a:visited, a:hoover, a:active{
     background: #d3c9c9;
     border-radius: 18px 18px 18px 0 !important;
 }
+
+.incoming .details p span{
+    color: #314cb6;
+}
+.incoming .details p .out-time{
+    font-size: 11px;
+    text-align: end;
+    align-items: flex-end;
+}
+
 /* End of chat list css */
 
 /* :start of status css  */
@@ -322,7 +339,6 @@ a, a:link, a:visited, a:hoover, a:active{
     width: 100%;
     height: 11vh;
     border: 1px solid #314cb6;
-    color: #fff !important;
     border-radius: 1px !important;
     display: flex;
     flex-direction: row;
